--- a/elements/phi-list-item/phi-list-item.html
+++ b/elements/phi-list-item/phi-list-item.html
@@ -29,8 +29,13 @@
         :host ::content > * {
             display: inline-block;
             vertical-align: middle;
-            margin-right: 32px;
+            margin-right: 24px;
         }
+
+        :host ::content > *:last-child {
+            margin-right: initial;
+        }
+
 
     </style>
 
